// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider  = "postgresql"
  url       = env("DATABASE_URL")
  directUrl = env("DIRECT_URL")
}

enum UserRole {
  ADMIN
  USER
}

model User {
  id                String  @id @default(uuid())
  username          String?
  email             String? @unique
  password          String
  emailVerified     Boolean @default(false)
  verificationToken String?

  role        UserRole     @default(USER)
  userProfile UserProfile?

  createdAt DateTime  @default(now())
  updatedAt DateTime? @updatedAt
}

model UserProfile {
  id             String  @id @default(uuid())
  username       String
  emailAddress   String
  prefix         String?
  fullName       String?
  codeNumber     String?
  phoneNumber    String?
  educationLevel String?
  educationYear  String?
  description    String?
  profileImage   String?

  userId String @unique
  user   User   @relation(fields: [userId], references: [id], onUpdate: Cascade, onDelete: Cascade)

  activities      Activity[]
  favoriteBooks   FavoriteBook[]
  reservations    Reservation[]
  borrowings      Borrow[]       @relation("borrower")
  approvals       Borrow[]       @relation("approver")
  returnApprovals Borrow[]       @relation("returnApprover")

  createdAt DateTime  @default(now())
  updatedAt DateTime? @updatedAt
}

model FavoriteBook {
  id     String @id @default(uuid())
  userId String
  bookId String

  book Book        @relation(fields: [bookId], references: [id])
  user UserProfile @relation(fields: [userId], references: [userId])

  createdAt DateTime @default(now())
}

enum ActivityType {
  CREATE_BOOK
  UPDATE_BOOK
  CREATE_CATEGORY
  UPDATE_CATEGORY
  CREATE_BANNER
  UPDATE_BANNER
  CREATE_BORROW
  RETURN_APPROVALS
}

model Activity {
  id            String       @id @default(uuid())
  type          ActivityType
  userProfileId String
  userProfile   UserProfile  @relation(fields: [userProfileId], references: [userId])
  bookId        String?
  book          Book?        @relation(fields: [bookId], references: [id])
  categoryId    String?
  category      Category?    @relation(fields: [categoryId], references: [id])
  bannerId      String?
  banner        Banner?      @relation(fields: [bannerId], references: [id])
  borrowingId   String?
  borrowing     Borrow?      @relation(fields: [borrowingId], references: [id])

  createdAt DateTime  @default(now())
  updatedAt DateTime? @updatedAt
}

model Category {
  id          String  @id @default(uuid())
  title       String
  slug        String  @unique
  imageUrl    String?
  description String?
  creatorId   String?

  book       Book[]
  activities Activity[]

  createdAt DateTime  @default(now())
  updatedAt DateTime? @updatedAt
}

model Book {
  id          String   @id @default(uuid())
  title       String
  slug        String   @unique
  price       Int
  quantity    Int
  remaining   Int
  author      String
  active      Boolean  @default(true)
  imageUrl    String?
  imageUrls   String[]
  description String?

  activities   Activity[]
  favoriteBy   FavoriteBook[]
  reservations Reservation[]
  borrowings   Borrow[]

  categoryId String
  category   Category @relation(fields: [categoryId], references: [id])

  createdAt DateTime  @default(now())
  updatedAt DateTime? @updatedAt
}

model DepartmentBook {
  id          String   @id @default(uuid())
  title       String
  slug        String   @unique
  department  String
  price       Int      @default(0)
  quantity    Int
  remaining   Int
  author      String?
  active      Boolean  @default(true)
  imageUrl    String?
  imageUrls   String[]
  description String?

  createdAt DateTime  @default(now())
  updatedAt DateTime? @updatedAt
}

model Banner {
  id         String     @id @default(uuid())
  imageUrls  String[]
  activities Activity[]

  createdAt DateTime  @default(now())
  updatedAt DateTime? @updatedAt
}

enum BorrowingStatus {
  BORROWED
  RETURNED
  OVERDUE
  LOST
}

enum BorrowReminderType {
  DUE_TOMORROW
  OVERDUE
}

model Borrow {
  id               String       @id @default(uuid())
  bookId           String
  book             Book         @relation(fields: [bookId], references: [id])
  borrowerId       String
  borrower         UserProfile  @relation("borrower", fields: [borrowerId], references: [userId])
  approverId       String
  approver         UserProfile  @relation("approver", fields: [approverId], references: [userId])
  returnApproverId String?
  returnApprover   UserProfile? @relation("returnApprover", fields: [returnApproverId], references: [userId])

  borrowDate   DateTime         @default(now())
  dueDate      DateTime
  returnDate   DateTime?
  numberOfDays Int
  damaged      Int              @default(0)
  isReturned   Boolean          @default(false)
  fine         Float            @default(0)
  status       BorrowingStatus  @default(BORROWED)
  activities   Activity[]
  reminders    BorrowReminder[]

  createdAt DateTime  @default(now())
  updatedAt DateTime? @updatedAt
}

model BorrowReminder {
  id          String             @id @default(uuid())
  borrowId    String
  type        BorrowReminderType
  reminderDay DateTime
  sentAt      DateTime           @default(now())

  borrow Borrow @relation(fields: [borrowId], references: [id], onDelete: Cascade)

  @@unique([borrowId, type, reminderDay])
  @@index([reminderDay])
}

model Reservation {
  id           String  @id @default(uuid())
  userId       String
  bookId       String
  isRead       Boolean @default(false)
  numberOfDays Int     @default(3)

  book Book        @relation(fields: [bookId], references: [id])
  user UserProfile @relation(fields: [userId], references: [userId])

  createdAt DateTime @default(now())
}
